Fixed problem with import sub.

--- a/README.html
+++ b/README.html
@@ -46,7 +46,7 @@
 
 <h1 id="VERSION">VERSION</h1>
 
-<p>0.10</p>
+<p>0.11</p>
 
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
@@ -246,7 +246,7 @@
 
 <p>Setting this parameter does not change the value of $/ or vice versa.</p>
 
-<p>The &quot;separator&quot; value cannot de an empty string. If it is undef the data is seen as a single string.</p>
+<p>The &quot;separator&quot; value cannot be an empty string. If it is undef the data is seen as a single string.</p>
 
 </dd>
 </dl>
