--- a/README.html
+++ b/README.html
@@ -43,7 +43,7 @@
 
 <h1 id="VERSION">VERSION</h1>
 
-<p>0.21</p>
+<p>0.30</p>
 
 <h1 id="SYNOPSIS">SYNOPSIS</h1>
 
@@ -69,9 +69,11 @@
 
 <h1 id="DESCRIPTION">DESCRIPTION</h1>
 
-<p>Slurp style file IO with locking. The purpose of Takeput is to make it pleasant for you to script file IO. Slurp style is both user friendly and very effective, if you can have your files in memory.</p>
+<p>Slurp style file IO with locking. The purpose of Takeput is to make it pleasant for you to script file IO. Slurp style is both user friendly and very effective if you can have your files in memory.</p>
 
-<p>The other major point of Takeput is locking. Takeput is careful to help your script be a good citizen in a busy filesystem. All its file operations respect and set flock locking. If your script misses a lock and does not release it, the lock will be released when your script terminates.</p>
+<p>The other major point of Takeput is locking. Takeput is careful to help your script be a good citizen in a busy filesystem. All its file operations respect and set flock locking.</p>
+
+<p>If your script misses a lock and does not release it, the lock will be released when your script terminates.</p>
 
 <p>Encoding is often part of file IO operations, but Takeput keeps out of that. It reads and writes file content just as strings of bytes, in a sort of line-based binmode. Use some other module if you need decoding and encoding. For example:</p>
 
@@ -105,7 +107,11 @@
 <dt id="pass-filename">pass( $filename )</dt>
 <dd>
 
-<p>Releases the lock on the $filename file. The content of the file will be the same as when the lock was taken (if everyone respects the locking). This is useful when a lock was taken with the &quot;take&quot; subroutine, but it later turned out that there was nothing to write to the file.</p>
+<p>Releases the lock on the $filename file.</p>
+
+<p>The content of the file will normally be the same as when the lock was taken with the &quot;take&quot; subroutine. This is useful when a lock was taken, but it later turned out that there was nothing to write to the file.</p>
+
+<p>There are two caveats. If the &quot;create&quot; configuration parameter is true, the file might have been created when it was taken, so it has been changed in that sense. And of course flock locks are only advisory, so other processes can ignore the locks and change the file while it is taken.</p>
 
 </dd>
 <dt id="plunk-filename---data">plunk( $filename )-&gt;( @data )</dt>
@@ -125,9 +131,11 @@
 <dt id="take-filename">take( $filename )</dt>
 <dd>
 
-<p>Sets a lock on the $filename file, reads and returns its content. A call to &quot;take&quot; should later on be followed by a call to &quot;put&quot; or &quot;pass&quot;.</p>
+<p>Sets a lock on the $filename file, reads and returns its content.</p>
 
-<p>Reading an empty file will return a list with one element, the empty string. If a false value is returned instead, it is because &quot;take&quot; could not read the file.</p>
+<p>The &quot;take&quot; call has write intention, because it is the first part of an operation. The second part is a call A call to &quot;put&quot; or &quot;pass&quot;.</p>
+
+<p>Opening an empty file will return a list with one element, the empty string. If a false value is returned instead, it is because &quot;take&quot; could not read the file.</p>
 
 </dd>
 <dt id="fgrab-filename">fgrab( $filename )</dt>
@@ -175,7 +183,7 @@
 
 <h1 id="CONFIGURATION">CONFIGURATION</h1>
 
-<p>There are seven configuration parameters.</p>
+<p>There are eight configuration parameters.</p>
 
 <dl>
 
@@ -226,6 +234,8 @@
     File::Takeput::set(separator =&gt; undef , flatten =&gt; 1); # Because of this...
     my $fancy_data = Load grab(&#39;my_file.yaml&#39;);            # ...this will work.</code></pre>
 
+<p>Note that with &quot;flatten&quot; set to true, reading an empty file returns the empty string, which counts as false. Failing to read a file returns undef. So test for definedness to not be tricked by this.</p>
+
 </dd>
 <dt id="newline">newline</dt>
 <dd>
@@ -251,6 +261,16 @@
 <p>Setting this parameter does not change the value of $/ or vice versa.</p>
 
 <p>The &quot;separator&quot; value cannot be an empty string. If it is undef the data is seen as a single string.</p>
+
+</dd>
+<dt id="unique">unique</dt>
+<dd>
+
+<p>A scalar. If true Takeput will fail opening a file if it already exists. This can be used to avoid race conditions.</p>
+
+<p>Only used by calls with write intention.</p>
+
+<p>If &quot;unique&quot; is true, calls will work as if &quot;create&quot; is true and &quot;patience&quot; is 0, no matter what they are set to.</p>
 
 </dd>
 </dl>
@@ -322,6 +342,8 @@
 <p><code>patience</code>: 0</p>
 
 <p><code>separator</code>: $/ (at compile time)</p>
+
+<p><code>unique</code>: undef (false)</p>
 
 <h1 id="ERROR-HANDLING">ERROR HANDLING</h1>
 
